Set up the Class Project

--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Class Project</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/main.js"></script>
 </head>
 <body>
 
-
-
-    <button >Click</button>
-
-    <ul>
-        <li>one</li>
-        <li>two</li>
-    </ul>
-    
+<button onclick="myFunction">Click</button>
+<div id="demo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, neque sit, eaque voluptatem autem, porro voluptatibus aperiam perspiciatis ut quisquam cupiditate vel repellendus cumque adipisci labore ea assumenda debitis similique?</div>
+     
 </body>
 </html>
