--- a/day-3/index.html
+++ b/day-3/index.html
@@ -6,9 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Project</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js"></script>
+    <script src="js/story.js"></script>
 </head>
 <body>
+
+
+
+<textarea>
+<button>
+    Click to create paragraph.
+</button>
+
 
 <button onclick="myFunction">Click</button>
 <div id="demo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam, neque sit, eaque voluptatem autem, porro voluptatibus aperiam perspiciatis ut quisquam cupiditate vel repellendus cumque adipisci labore ea assumenda debitis similique?</div>
